--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@ loom_version=1.10-SNAPSHOT
 mod_version=1.0.0
 maven_group=com.heartgold
 archives_base_name=heart-gold
-
+emi_version = 1.1.22+1.20.1
 # Dependencies
 fabric_version=0.92.6+1.20.1
