--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,6 @@ mod_version=1.0.0
 maven_group=com.heartgold
 archives_base_name=heart-gold
 emi_version = 1.1.22+1.20.1
+jei_version =15.20.0.106
 # Dependencies
 fabric_version=0.92.6+1.20.1
